# django-nested-menu

./: .env.example  .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
src/django_nested_menu/: manage.py
src/django_nested_menu/app_django_config/: asgi.py  settings.py  urls.py  wsgi.py
src/django_nested_menu/menu/: admin.py  helpers.py  models.py  services.py
src/django_nested_menu/menu/management/commands/: generate_menu.py
src/django_nested_menu/menu/migrations/: 0001_initial.py
src/django_nested_menu/menu/templates/menu/: menu.html  menu_item.html
src/django_nested_menu/menu/templatetags/: menu_tags.py
src/django_nested_menu/pages/: models.py  urls.py  views.py
src/django_nested_menu/pages/management/commands/: generate_pages.py
src/django_nested_menu/pages/migrations/: 0001_initial.py  0002_page_path.py
src/django_nested_menu/pages/templates/: base.html  base_footer.html  base_header.html
src/django_nested_menu/pages/templates/pages/: page.html
